--- a/todo/main.html
+++ b/todo/main.html
@@ -7,7 +7,24 @@
     />
     <meta http-equiv="Pragma" content="no-cache" />
     <meta http-equiv="Expires" content="0" />
-
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="./images/favicon//apple-touch-icon.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./images/favicon/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="./images/favicon/favicon-16x16.png"
+    />
+    <link rel="manifest" href="./images//favicon/site.webmanifest" />
     <title>TODO</title>
 
     <link rel="stylesheet" href="./main.css" />
@@ -28,7 +45,9 @@
         ><img src="./images/icAddTodo.svg"
       /></span>
       <button class="sign-out">SignOut</button>
-      <span class="profile-img"><img src="./images/profilePic.png" /></span>
+      <span class="profile-img"
+        ><img class="pp" src="" alt="User Profile Pic"
+      /></span>
     </header>
 
     <main>
