--- a/todo/main.html
+++ b/todo/main.html
@@ -24,7 +24,7 @@
       sizes="16x16"
       href="./images/favicon/favicon-16x16.png"
     />
-    <link rel="manifest" href="./images//favicon/site.webmanifest" />
+    <link rel="manifest" href="./images/favicon/site.webmanifest" />
     <title>TODO</title>
 
     <link rel="stylesheet" href="./main.css" />
